crates/check_cli/tests/snapshots/main_commands_check/applies_organize_imports_bug_4552.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "assist": {
    "enabled": true,
    "includes": ["**", "!index.ts"]
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true,
      "correctness": { "noUnusedImports": "off" }
    }
  }
}
```

## `index.ts`

```ts
import { secondFunction, firstFunction } from "./import";

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
