crates/check_cli/tests/snapshots/main_commands_check/check_help.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Emitted Messages

```block
Runs formatter, linter and import sorting to the requested files.

Usage: check [--write] [--unsafe] [--assist-enabled=<true|false>] [--enforce-assist=<true|false>] [
--staged] [--changed] [--since=REF] [PATH]...

The configuration that is contained inside the file `check.json`
        --vcs-enabled=<true|false>  Whether Check should integrate itself with the VCS client
        --vcs-client-kind=<git>  The kind of client.
        --vcs-use-ignore-file=<true|false>  Whether Check should use the VCS ignore file. When
                              [true], Check will ignore the files specified in the ignore file.
        --vcs-root=PATH       The folder where Check should check for VCS files. By default, Check
                              will use the same folder where `check.json` was found.
                              If Check can't find the configuration, it will attempt to use the
                              current working directory. If no current working directory can't be
                              found, Check won't use the VCS integration, and a diagnostic will be
                              emitted
        --vcs-default-branch=BRANCH  The main branch of the project
        --files-max-size=NUMBER  The maximum allowed size for source code files in bytes. Files
                              above this limit will be ignored for performance reasons. Defaults to
                              1 MiB
        --files-ignore-unknown=<true|false>  Tells Check to not emit diagnostics when handling files
                              that doesn't know
        --indent-style=<tab|space>  The indent style.
        --indent-width=NUMBER  The size of the indentation, 2 by default
        --line-ending=<lf|crlf|cr>  The type of line ending.
        --line-width=NUMBER   What's the max width of a line. Defaults to 80.
        --attribute-position=<multiline|auto>  The attribute position style in HTML-ish languages.
                              Defaults to auto.
        --bracket-same-line=<true|false>  Put the `>` of a multi-line HTML or JSX element at the end
                              of the last line instead of being alone on the next line (does not
                              apply to self closing elements).
        --bracket-spacing=<true|false>  Whether to insert spaces around brackets in object literals.
                              Defaults to true.
        --expand=<auto|always|never>  Whether to expand arrays and objects on multiple lines. When
                              set to `auto`, object literals are formatted on multiple lines if the
                              first property has a newline, and array literals are formatted on a
                              single line if it fits in the line. When set to `always`, these
                              literals are formatted on multiple lines, regardless of length of the
                              list. When set to `never`, these literals are formatted on a single
                              line if it fits in the line. When formatting `package.json`, Check
                              will use `always` unless configured otherwise. Defaults to "auto".
        --use-editorconfig=<true|false>  Use any `.editorconfig` files to configure the formatter.
                              Configuration in `check.json` will override `.editorconfig`
                              configuration.
                              Default: `true`.
        --jsx-everywhere=<true|false>  When enabled, files like `.js`/`.mjs`/`.cjs` may contain JSX
                              syntax.
                              Defaults to `true`.
        --javascript-formatter-enabled=<true|false>  Control the formatter for JavaScript (and its
                              super languages) files.
        --jsx-quote-style=<double|single>  The type of quotes used in JSX. Defaults to double.
        --quote-properties=<preserve|as-needed>  When properties in objects are quoted. Defaults to
                              asNeeded.
        --trailing-commas=<all|es5|none>  Print trailing commas wherever possible in multi-line
                              comma-separated syntactic structures. Defaults to "all".
        --semicolons=<always|as-needed>  Whether the formatter prints semicolons for all statements
                              or only in for statements where it is necessary because of ASI.
        --arrow-parentheses=<always|as-needed>  Whether to add non-necessary parentheses to arrow
                              functions. Defaults to "always".
        --bracket-same-line=<true|false>  Whether to hug the closing bracket of multiline HTML/JSX
                              tags to the end of the last line, rather than being alone on the
                              following line. Defaults to false.
        --javascript-formatter-indent-style=<tab|space>  The indent style applied to JavaScript (and
                              its super languages) files.
        --javascript-formatter-indent-width=NUMBER  The size of the indentation applied to
                              JavaScript (and its super languages) files. Default to 2.
        --javascript-formatter-line-ending=<lf|crlf|cr>  The type of line ending applied to
                              JavaScript (and its super languages) files.
        --javascript-formatter-line-width=NUMBER  What's the max width of a line applied to
                              JavaScript (and its super languages) files. Defaults to 80.
        --javascript-formatter-quote-style=<double|single>  The type of quotes used in JavaScript
                              code. Defaults to double.
        --javascript-formatter-attribute-position=<multiline|auto>  The attribute position style in
                              JSX elements. Defaults to auto.
        --javascript-formatter-bracket-spacing=<true|false>  Whether to insert spaces around
                              brackets in object literals. Defaults to true.
        --javascript-formatter-expand=<auto|always|never>  Whether to expand arrays and objects on
                              multiple lines. When set to `auto`, object literals are formatted on
                              multiple lines if the first property has a newline, and array literals
                              are formatted on a single line if it fits in the line. When set to
                              `always`, these literals are formatted on multiple lines, regardless
                              of length of the list. When set to `never`, these literals are
                              formatted on a single line if it fits in the line. When formatting
                              `package.json`, Check will use `always` unless configured otherwise.
                              Defaults to "auto".
        --javascript-formatter-operator-linebreak=<before|after>  When breaking binary expressions
                              into multiple lines, whether to break them before or after the binary
                              operator. Defaults to "after".
        --javascript-linter-enabled=<true|false>  Control the linter for JavaScript (and its super
                              languages) files.
        --javascript-assist-enabled=<true|false>  Control the assist for JavaScript (and its super
                              languages) files.
        --json-formatter-enabled=<true|false>  Control the formatter for JSON (and its super
                              languages) files.
        --json-formatter-indent-style=<tab|space>  The indent style applied to JSON (and its super
                              languages) files.
        --json-formatter-indent-width=NUMBER  The size of the indentation applied to JSON (and its
                              super languages) files. Default to 2.
        --json-formatter-line-ending=<lf|crlf|cr>  The type of line ending applied to JSON (and its
                              super languages) files.
        --json-formatter-line-width=NUMBER  What's the max width of a line applied to JSON (and its
                              super languages) files. Defaults to 80.
        --json-formatter-trailing-commas=<none|all>  Print trailing commas wherever possible in
                              multi-line comma-separated syntactic structures. Defaults to "none".
        --json-formatter-expand=<auto|always|never>  Whether to expand arrays and objects on
                              multiple lines. When set to `auto`, object literals are formatted on
                              multiple lines if the first property has a newline, and array literals
                              are formatted on a single line if it fits in the line. When set to
                              `always`, these literals are formatted on multiple lines, regardless
                              of length of the list. When set to `never`, these literals are
                              formatted on a single line if it fits in the line. When formatting
                              `package.json`, Check will use `always` unless configured otherwise.
                              Defaults to "auto".
        --json-formatter-bracket-spacing=<true|false>  Whether to insert spaces around brackets in
                              object literals. Defaults to true.
        --json-linter-enabled=<true|false>  Control the linter for JSON (and its super languages)
                              files.
        --json-assist-enabled=<true|false>  Control the assist for JSON (and its super languages)
                              files.
        --css-formatter-enabled=<true|false>  Control the formatter for CSS (and its super
                              languages) files.
        --css-formatter-indent-style=<tab|space>  The indent style applied to CSS (and its super
                              languages) files.
        --css-formatter-indent-width=NUMBER  The size of the indentation applied to CSS (and its
                              super languages) files. Default to 2.
        --css-formatter-line-ending=<lf|crlf|cr>  The type of line ending applied to CSS (and its
                              super languages) files.
        --css-formatter-line-width=NUMBER  What's the max width of a line applied to CSS (and its
                              super languages) files. Defaults to 80.
        --css-formatter-quote-style=<double|single>  The type of quotes used in CSS code. Defaults
                              to double.
        --css-linter-enabled=<true|false>  Control the linter for CSS files.
        --css-assist-enabled=<true|false>  Control the assist for CSS files.
        --graphql-formatter-enabled=<true|false>  Control the formatter for GraphQL files.
        --graphql-formatter-indent-style=<tab|space>  The indent style applied to GraphQL files.
        --graphql-formatter-indent-width=NUMBER  The size of the indentation applied to GraphQL
                              files. Default to 2.
        --graphql-formatter-line-ending=<lf|crlf|cr>  The type of line ending applied to GraphQL
                              files.
        --graphql-formatter-line-width=NUMBER  What's the max width of a line applied to GraphQL
                              files. Defaults to 80.
        --graphql-formatter-quote-style=<double|single>  The type of quotes used in GraphQL code.
                              Defaults to double.
        --graphql-linter-enabled=<true|false>  Control the formatter for GraphQL files.
        --graphql-assist-enabled=<true|false>  Control the formatter for GraphQL files.
        --grit-formatter-enabled=<true|false>  Control the formatter for Grit files.
        --grit-formatter-indent-style=<tab|space>  The indent style applied to Grit files.
        --grit-formatter-indent-width=NUMBER  The size of the indentation applied to Grit files.
                              Default to 2.
        --grit-formatter-line-ending=<lf|crlf|cr>  The type of line ending applied to Grit files.
        --grit-formatter-line-width=NUMBER  What's the max width of a line applied to Grit files.
                              Defaults to 80.
        --grit-linter-enabled=<true|false>  Control the linter for Grit files.
        --grit-assist-enabled=<true|false>  Control the assist functionality for Grit files.
        --html-formatter-enabled=<true|false>  Control the formatter for HTML (and its super
                              languages) files.
        --html-formatter-indent-style=<tab|space>  The indent style applied to HTML (and its super
                              languages) files.
        --html-formatter-indent-width=NUMBER  The size of the indentation applied to HTML (and its
                              super languages) files. Default to 2.
        --html-formatter-line-ending=<lf|crlf|cr>  The type of line ending applied to HTML (and its
                              super languages) files.
        --html-formatter-line-width=NUMBER  What's the max width of a line applied to HTML (and its
                              super languages) files. Defaults to 80.
        --html-formatter-attribute-position=<multiline|auto>  The attribute position style in HTML
                              elements. Defaults to auto.
        --html-formatter-bracket-same-line=<true|false>  Whether to hug the closing bracket of
                              multiline HTML tags to the end of the last line, rather than being
                              alone on the following line. Defaults to false.
        --html-formatter-whitespace-sensitivity=<css|strict|ignore>  Whether to account for
                              whitespace sensitivity when formatting HTML (and its super languages).
                              Defaults to "css".
        --html-formatter-indent-script-and-style=<true|false>  Whether to indent the `<script>` and
                              `<style>` tags for HTML (and its super languages). Defaults to false.
        --html-formatter-self-close-void-elements=<always|never>  Whether void elements should be
                              self-closed. Defaults to never.
        --assist-enabled=<true|false>  Whether Check should enable assist via LSP and CLI.

Global options applied to all commands
        --colors=<off|force>  Set the formatting mode for markup: "off" prints everything as plain
                              text, "force" forces the formatting of markup using ANSI even if the
                              console output is determined to be incompatible
        --use-server          Connect to a running instance of the Check daemon server.
        --verbose             Print additional diagnostics, and some diagnostics show more
                              information. Also, print out what files were processed and which ones
                              were modified.
        --config-path=PATH    Set the file path to the configuration file, or the directory path to
                              find `check.json` or `check.jsonc`. If used, it disables the default
                              configuration file resolution.
                              [env:CHECK_CONFIG_PATH: N/A]
        --max-diagnostics=<none|<NUMBER>>  Cap the amount of diagnostics displayed. When `none` is
                              provided, the limit is lifted.
                              [default: 20]
        --skip-parse-errors   Skip over files containing syntax errors instead of emitting an error
                              diagnostic.
        --no-errors-on-unmatched  Silence errors that would be emitted in case no files were
                              processed during the execution of the command.
        --error-on-warnings   Tell Check to exit with an error code if some diagnostics emit
                              warnings.
        --reporter=<json|json-pretty|github|junit|summary|gitlab>  Allows to change how diagnostics
                              and summary are reported.
        --log-file=ARG        Optional path to redirect log messages to.
                              If omitted, logs are printed to stdout.
        --log-level=<none|debug|info|warn|error>  The level of logging. In order, from the most
                              verbose to the least verbose: debug, info, warn, error.
                              The value `none` won't show any logging.
                              [default: none]
        --log-kind=<pretty|compact|json>  How the log should look like.
                              [default: pretty]
        --diagnostic-level=<info|warn|error>  The level of diagnostics to show. In order, from the
                              lowest to the most important: info, warn, error. Passing
                              `--diagnostic-level=error` will cause Check to print only diagnostics
                              that contain only errors.
                              [default: info]

Available positional items:
    PATH                      Single file, single path or list of paths

Available options:
        --write               Apply safe fixes, formatting and import sorting
        --unsafe              Apply unsafe fixes. Should be used with `--write` or `--fix`
        --fix                 Alias for `--write`, writes safe fixes, formatting and import sorting
        --formatter-enabled=<true|false>  Allow enabling or disabling the formatter check.
        --linter-enabled=<true|false>  Allow enabling or disabling the linter check.
        --assist-enabled=<true|false>  Allow enabling or disabling the assist.
        --enforce-assist=<true|false>  Allows enforcing assist, and make the CLI fail if some
                              actions aren't applied. Defaults to `true`.
        --stdin-file-path=PATH  Use this option when you want to format code piped from `stdin`, and
                              print the output to `stdout`.
                              The file doesn't need to exist on disk, what matters is the extension
                              of the file. Based on the extension, Check knows how to check the
                              code.
                              Also, if you have overrides configured and/or nested configurations,
                              the path may determine the settings being applied.
                              Example: ```shell echo 'let a;' | check check
                              --stdin-file-path=file.js --write ```
        --staged              When set to true, only the files that have been staged (the ones
                              prepared to be committed) will be linted. This option should be used
                              when working locally.
        --changed             When set to true, only the files that have been changed compared to
                              your `defaultBranch` configuration will be linted. This option should
                              be used in CI environments.
        --since=REF           Use this to specify the base branch to compare against when you're
                              using the --changed flag and the `defaultBranch` is not set in your
                              `check.json`
    -h, --help                Prints help information

```
