crates/check_cli/tests/snapshots/main_commands_check/check_json_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDuplicateObjectKeys": "error"
      }
    }
  }
}
```

## `test.json`

```json
{ "foo": true, "foo": true }
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.json:1:3 lint/suspicious/noDuplicateObjectKeys ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key foo was already declared.
  
  > 1 │ { "foo": true, "foo": true }
      │   ^^^^^
  
  i This is where a duplicated key was declared again.
  
  > 1 │ { "foo": true, "foo": true }
      │                ^^^^^
  
  i If a key is defined multiple times, only the last definition takes effect. Previous definitions are ignored.
  

```

```block
test.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - {·"foo":·true,·"foo":·true·}
      1 │ + {·"foo":·true,·"foo":·true·}
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
